[tool.poetry]
name = "ml-kaagle-ames-house"
version = "0.1.0"
description = ""
authors = ["ni"]
readme = "README.md"
packages = [{include = "ml_kaagle_ames_house"}]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
